# cdm

./: .gitignore  LICENSE  README.md  pyproject.toml
cdm/: cdm.py
cdm/core/: command.py  command_test.py
