[tool.poetry]
name = "cdm"
version = "0.1.0"
description = ""
authors = ["euraxluo <1793939176@qq.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.4.0"
rich-click = "^1.5.2"
typer = "^0.6.1"


[tool.poetry.scripts]
cdm = "cdm.cdm:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
